<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondBrother</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="activity">活动</string>
    <string name="user">账户</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="edt_pwd">请输入密码</string>
    <string name="re_pwd">请再输入一次密码</string>
    <string name="registered">注册</string>
    <string name="forgotpwd">忘记密码</string>
    <string name="verificationcode">验证码</string>
    <string name="getverificationcode">获取验证码</string>
    <string name="right">确定</string>
    <string name="screen">银幕</string>
    <string name="topay">立即购票</string>
    <string name="myfriends">我的好友</string>
    <string name="mycomment">我的评论</string>
    <string name="yaoyiyao">摇一摇</string>
    <string name="fujideren">附近的人</string>
    <string name="wait_to_pay">待付款订单</string>
    <string name="my_ticket">我的电影票</string>
    <string name="clean">清除缓存</string>
    <string name="remind">观影提醒</string>
    <string name="feedback"> 意见反馈</string>
    <string name="about">关于</string>

</resources>