<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/remind"
            android:paddingLeft="15dp"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/remind_btn"
            
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="ToggleButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/clean_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:text="@string/clean"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/feedback_tv"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/feedback"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_tv"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:textSize="20sp"
        android:text="@string/about" />

</LinearLayout>