<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <Button
        android:id="@+id/login_btn1"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#FFCC00"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <LinearLayout
            android:id="@+id/wait_order_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/wait_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/wait_order" />

            <TextView
                android:id="@+id/wait_order_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wait_to_pay"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_ticket_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/user_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/user_ticket" />

            <TextView
                android:id="@+id/user_ticket_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/my_ticket"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/yaoyiyao_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/yaoyiyao_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/yaoyiyao" />

            <TextView
                android:id="@+id/yaoyiyao_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="18sp"
                android:text="摇一摇"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fujinderen_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp" >

            <ImageView
                android:id="@+id/fujin_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fujinderen" />

            <TextView
                android:id="@+id/fujin_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="18sp"
                android:text="附近的人"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginBottom="79dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/option_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            >

            <ImageView
                android:id="@+id/option_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/option" />

            <TextView
                android:id="@+id/option_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="设置"
                 />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>